k8s/overlays/dev/patches/grafana-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
